--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -4,6 +4,10 @@
     cursor: pointer;
 }
 
+.video-item.item {
+    padding: 10px 0 !important;
+}
+
 .video-item.item img {
-    max-width: 180px;
+    max-width: 140px;
 }
